@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR
skinparam classBackgroundColor LOGIC_COLOR

abstract class "{abstract}\nDuePredicate" as DuePredicate
class DueBeforePredicate
class DueAtPredicate

DuePredicate <|-- DueBeforePredicate
DuePredicate <|-- DueAtPredicate

@enduml
